tests/semantic/fact_empty/fact_empty.err
Error: Mismatching arity of relation edge in file fact_empty.dl at line 15
edge( ).
^--------
Error: Not all clauses could be typechecked due to other errors present
2 errors generated, evaluation aborted
